toolchain/internal/core/analysis/testdata/errors/collisions/enum_value_collision.vdl
// @expect: E901
// Type collides with auto-generated PriorityValue from enum Priority

enum Priority {
  Low
  Medium
  High
}

type PriorityValue {
  level: int
}
